# systemd-boot-efi

./: .gitignore  README.md  meson.build  meson_options.txt  version.h.in
efi/: boot.c  console.c  console.h  meson.build  secure-boot.c
efi/proto/: simple-pointer.h
tools/: debug-sd-boot.sh
