option('mode', type : 'combo', choices : ['developer', 'release'],
       description : 'autoenable features suitable for systemd development/release builds')

option('tpm', type : 'boolean',
       description : 'TPM should be used to log events and extend the registers')
option('sbat-distro', type : 'string', value : 'auto',
       description : 'SBAT distribution ID, e.g. fedora, or auto for autodetection')
option('sbat-distro-generation', type : 'integer', value : 1,
       description : 'SBAT distribution generation')
option('sbat-distro-summary', type : 'string',
       description : 'SBAT distribution summary, e.g. Fedora')
option('sbat-distro-pkgname', type : 'string',
       description : 'SBAT distribution package name, e.g. systemd')
option('sbat-distro-version', type : 'string',
       description : 'SBAT distribution package version, e.g. 248-7.fc34')
option('sbat-distro-url', type : 'string',
       description : 'SBAT distribution URL, e.g. https://src.fedoraproject.org/rpms/systemd')

option('efi-color-normal', type : 'string', value : 'lightgray,black',
       description : 'general boot loader color in "foreground,background" form, see constants from eficon.h')
option('efi-color-entry', type : 'string', value : 'lightgray,black',
       description : 'boot loader color for entries')
option('efi-color-highlight', type : 'string', value : 'black,lightgray',
       description : 'boot loader color for selected entries')
option('efi-color-edit', type : 'string', value : 'black,lightgray',
       description : 'boot loader color for option line edit')
